fixed positioning by keeping popup div directly inside of <body> adjusted z-index so hopefully we don't get covered.

--- a/Magnetic.safariextension/popup.css
+++ b/Magnetic.safariextension/popup.css
@@ -9,6 +9,7 @@
   background-color: rgba(221,221,221,0.9);
   overflow: visible;
   float:left;
+  z-index: 9999;
 }
 
 .magnetic #notch {
